correct hero section text alignment

--- a/styles/about.style.desktop.css
+++ b/styles/about.style.desktop.css
@@ -12,7 +12,6 @@
 
   main .container {
     width: 100%;
-    position: relative;
   }
 
   .top-nav .container {
